--- a/content/Journaling/2025/Week 51/2025-12-15.md
+++ b/content/Journaling/2025/Week 51/2025-12-15.md
@@ -2,7 +2,7 @@
 title: 'Monday'
 authors:
 description:
-type: '[[Journal]]'
+type: '[Journal](../../../../index.md)'
 created: 2025-12-15T11:33:43+01:00
 modified: 2026-01-26T11:54:10+01:00
 license:
@@ -14,7 +14,7 @@ cssclasses:
   - 'Monday'
   - daily
 long_title: 'Monday, December 15th, 2025'
-places: '[[Home]]'
+places: '[Home](../../../../index.md)'
 tags:
   - 'Monday'
   - daily
