--- a/content/Journaling/2026/Week 07/2026-02-09.md
+++ b/content/Journaling/2026/Week 07/2026-02-09.md
@@ -2,7 +2,7 @@
 title: 'Monday'
 authors:
 description:
-type: '[[Journal]]'
+type: '[Journal](../../../../index.md)'
 created: 2025-12-15T11:33:43+01:00
 modified: 2026-02-14T01:08:04+01:00
 license:
@@ -14,7 +14,7 @@ cssclasses:
   - 'Monday'
   - daily
 long_title: 'Monday, February 9th, 2026'
-places: '[[Home]]'
+places: '[Home](../../../../index.md)'
 tags:
   - 'Monday'
   - daily
